[package]
name = "gcloud"
version = "0.1.5-alpha.0"
authors = ["François-Guillaume RIBREAU <github@fgribreau.com>"]
repository = "https://github.com/FGRibreau/gcloud"
readme = "README.md"
documentation = "https://docs.rs/gcloud"
description = "Google Cloud Client"
keywords = ["google", "google-cloud", "client"]
categories = ["web-programming"]
license = "MIT"

[lib]

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

# A flag for enabling documentation tests for this target. This is only relevant
# for libraries, it has no effect on other sections. This is used by
# `cargo test`.
doctest = true

# A flag for enabling benchmarks for this target. This is used by `cargo bench`.
bench = true

# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[dependencies]
futures = "0.1"
reqwest = "0.9.5"
env_logger = "0.4.3"
log = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tap = "0.4.0"
querystring = "0.1"
